add settings option to link account with github account
